objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Description__c</fullName>
        <label>Team Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School_Name__c</columns>
        <columns>Team_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>