objects/Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>School_Name__c</columns>
    <columns>Team_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>